# workshop-llm-agents

./: .env.template  404.html  Dockerfile  Makefile  README.md  docker-compose.yaml  index.html  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-release.yaml  ghcr-release.yaml  test.yaml
agents/: index.html
docs/: agents.md  index.md  llms.md  references.md  scripts.md  tasks.md
litellm/: config.yaml
llms/: index.html
notebooks/: semantic_caching.ipynb  summarize_agent.ipynb
pages/: 1_chatbot_with_tools.py  2_research_agent_with_human_in_the_loop.py  3_documentation_agent.py  4_tools_agent.py
references/: index.html
scripts/: README.md  bing_searches.py  cosmosdbs.py  index.html  langchains.py  langgraph_quickstart.py  langgraphs.py
search/: search_index.json
tasks/: index.html
tests/: main.sh  test_core.py
workshop_llm_agents/agents/: chatbot_with_tools.py  documentation_agent.py  research_agent.py  single_path_plan_generation_agent.py  summarize_agent.py  tools_agent.py
workshop_llm_agents/graphs/: chatbot_with_tools.py
workshop_llm_agents/llms/: azure_openai.py  ollama.py
workshop_llm_agents/streamlits/: 1_chatbot_with_tools.py  2_research_agent_with_human_in_the_loop.py
workshop_llm_agents/tasks/: image_labeler.py  passive_goal_creator.py  prompt_optimizer.py  query_decomposer.py  response_optimizer.py  result_aggregator.py  scoring_evaluator.py  task_executor.py
workshop_llm_agents/tools/: bing_search.py  cosmosdb_search.py
workshop_llm_agents/vector_stores/: cosmosdb.py
