[tool.poetry]
name = "workshop-llm-agents"
version = "0.0.1"
description = "A GitHub template repository for Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "workshop_llm_agents", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
typer = "^0.15.1"
azure-cosmos = "^4.9.0"
langchain = "^0.3.9"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.8"
pymupdf = "^1.24.14"
langchainhub = "^0.1.21"
azure-identity = "^1.19.0"
langgraph = "^0.2.53"
streamlit = "^1.40.2"
langchain-ollama = "^0.2.1"
beautifulsoup4 = "^4.12.3"
numpy = "^1.22.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.6"
pytest = "^8.3.4"
coverage = "^7.6.8"
pytest-cov = "^6.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.47"


[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
